# finanseplus

./: README.md  backend_budzet.cpp
Finanse_plus_final/: CMakeLists.txt
Finanse_plus_final/app/: main.cpp
Finanse_plus_final/budzet/: budzet.cpp  budzet.h  dlugi.h  konto.cpp  mainwindow.cpp
Finanse_plus_final/kaucja/: dodajsaldo.h  wrzucbutelki.h  wrzucbutelki.ui  wyplacsaldo.cpp  wyplacsaldo.h  wyplacsaldo.ui
Finanse_plus_final/logowanie/: logowanie.cpp  logowanie.h  logowanie.ui  rejestracja.cpp  rejestracja.h  rejestracja.ui
archiwum/: backend_budzet.cpp  budzet_main_backend.cpp  struktury.h
budzet/: CMakeLists.txt  baza_danych.cpp  baza_danych.h  budzet.cpp  budzet.h  budzet_main_backend.cpp  dlugi.cpp  konto.cpp  konto.h  mainwindow.cpp  mainwindow.h
finanse+/: CMakeLists.txt
finanse+/archiwum/: budzet_main_backend.cpp
finanse+/budzet/: CMakeLists.txt  baza_danych.h  mainwindow.cpp  mainwindow.h
finanse+/logowanie/: logowanie.h
finanseplus — kopia/: CMakeLists.txt
finanseplus — kopia/app/: main.cpp
finanseplus — kopia/budzet/: budzet.h  mainwindow.cpp  mainwindow.h
finanseplus — kopia/kaucja/: welcomewindow.cpp  welcomewindow.h  wrzucbutelki.cpp  wyplacsaldo.h
finanseplus — kopia/logowanie/: CMakeLists.txt  logowanie.cpp  logowanie.ui
kaucja/: CMakeLists.txt  dodajsaldo.cpp  dodajsaldo.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  welcomewindow.ui  wrzucbutelki.cpp  wyplacsaldo.cpp  wyplacsaldo.h
logowanie/: CMakeLists.txt  logowanie.cpp  logowanie.h  logowanie.ui  main.cpp  mainwindow.h  mainwindow.ui
projekt-akualna wersja/archiwum/: backend_budzet.cpp  struktury.h
projekt-akualna wersja/budzet/: CMakeLists.txt
projekt-akualna wersja/kaucja/: CMakeLists.txt  dodajsaldo.cpp  dodajsaldo.ui  wrzucbutelki.cpp  wyplacsaldo.cpp  wyplacsaldo.h  wyplacsaldo.ui
projekt-akualna wersja/logowanie/: CMakeLists.txt  logowanie.ui  rejestracja.h
projekt/app/: main.cpp
projekt/archiwum/: CMakeLists.txt
projekt/kaucja/: dodajsaldo.cpp  dodajsaldo.h  dodajsaldo.ui  wrzucbutelki.h  wrzucbutelki.ui  wyplacsaldo.cpp  wyplacsaldo.ui
projekt/logowanie/: logowanie.cpp  logowanie.h  rejestracja.cpp  rejestracja.ui
